--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"start": "wp-scripts start --webpack-copy-php"
 	},
 	"devDependencies": {
+		"@wordpress/core-data": "^6.32.0",
 		"@wordpress/scripts": "^27.6.0"
 	}
 }
