--- a/package.json
+++ b/package.json
@@ -6,16 +6,20 @@
 	"license": "GPL-2.0-or-later",
 	"main": "build/index.js",
 	"scripts": {
-		"build": "wp-scripts build --webpack-copy-php",
+		"build": "wp-scripts build src/index.js src/metabox.tsx --webpack-copy-php",
 		"format": "wp-scripts format",
 		"lint:css": "wp-scripts lint-style",
 		"lint:js": "wp-scripts lint-js",
 		"packages-update": "wp-scripts packages-update",
 		"plugin-zip": "wp-scripts plugin-zip",
-		"start": "wp-scripts start --webpack-copy-php"
+		"start": "wp-scripts start src/index.js src/metabox.tsx --webpack-copy-php"
 	},
 	"devDependencies": {
+		"@types/wordpress__edit-post": "^7.5.7",
 		"@wordpress/core-data": "^6.32.0",
+		"@wordpress/data": "^9.25.0",
+		"@wordpress/edit-post": "^7.32.0",
+		"@wordpress/plugins": "^6.23.0",
 		"@wordpress/scripts": "^27.6.0"
 	}
 }
